--- a/src/wch-riscv.cfg
+++ b/src/wch-riscv.cfg
@@ -12,4 +12,6 @@ set _FLASHNAME $_CHIPNAME.flash
 
 flash bank $_FLASHNAME wch_riscv 0x00000000 0 0 0 $_TARGETNAME.0
 
+$_TARGETNAME.0 configure -event gdb-detach { shutdown }
+
 echo "Ready for Remote Connections"
